Fix an error with navbar links
Navbar link were not clickable due to an element that was changed to position relative covering it. This was changed by moving the elemement downwards.

--- a/css/index.css
+++ b/css/index.css
@@ -54,6 +54,8 @@
 
 .bottom-container {
     position: relative;
+    top: 10%;
+    height: 80%;
     width: min(100% - 4rem, 70rem);
     margin: auto;
 }
